    * 4386 FIX: Fixed exception when creating links from service views to service group views...
    * 4388 FIX: Views: Fixed exception with host tag columns which tag has been deleted...
    * 4389 FIX: Views: Fixed "Cached" column when cache interval is reported to be 0...
    * 4397 FIX: Views: Fixed datasource KeyError exception...

    WATO:
    * 4373 FIX: Timeperiods: iCal events with multiple days can now be imported
    * 4376 FIX: WATO Web-API: Is now disabled when WATO is disabled on a site (e.g. slave sites)
    * 4031 FIX: LVM Volume Groups: fixed broken WATO configuration...
            NOTE: Please refer to the migration notes!

    BI:
    * 4396 FIX: Fixed exception in BI views when using site icons...

    HW/SW-Inventory:
    * 3918 FIX: Inventory history: Fixed possible exception when renedering history tables...
    * 4395 FIX: Inventory filters: Fixed error handling when entering invalid regexes


1.2.8p17:
    Checks & Agents:
    * 4283 FIX: check_mail_loop: Now using "mail to" address in To header
    * 4297 FIX: oracle_instance: fixed discovery function...
    * 4298 FIX: omd_apache: fixed missing data handling
    * 4299 FIX: df: fixed missing filesystem type handling
    * 4300 FIX: job: fixed missing information handling
    * 4301 FIX: winperf_tcp_conn: fixed missing data handling
    * 4302 FIX: win_wmi_software: fixed invalid data handling
    * 4213 FIX: fjdarye101_syscaps: Fix failing check when using Nagios core
    * 4303 FIX: sap_state: fixed error handling
    * 4214 FIX: jolokia_metrics.tp: Fix crash in case of partial thread information...
    * 4304 FIX: mk_inventory.linux: fixed missing redirection to null device in if statement
    * 4305 FIX: postgres_stat_database.size: fixed missing database size perfometer
    * 4333 FIX: tsm_storage_pools: fixed incomplete data handling
    * 4343 FIX: apt: Fixed wrong state information of pending updates of normal and security updates...