@@ -30,6 +30,7 @@
     * 4388 FIX: Views: Fixed exception with host tag columns which tag has been deleted...
     * 4389 FIX: Views: Fixed "Cached" column when cache interval is reported to be 0...
     * 4397 FIX: Views: Fixed datasource KeyError exception...
+    * 4398 FIX: Fixed broken GUI when deleting local/share/check_mk/web/plugins dir...
 
     WATO:
     * 4373 FIX: Timeperiods: iCal events with multiple days can now be imported
